--- a/2.Grayscaling Images.ipynb
+++ b/2.Grayscaling Images.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLPIC07ZqDncwVlAIJRpj2",
+      "authorship_tag": "ABX9TyMljRYkzno2ve9mIKmQw7v6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,9 +261,61 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "image.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OgvT863DwX3H",
+        "outputId": "4867bc2d-380d-4656-b9ce-aab340038eb7"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(954, 1440, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gray_image.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XL4dYmU1xZSv",
+        "outputId": "90e2a6f8-426d-4b15-f0ef-741c8db33ad9"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(954, 1440)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OgvT863DwX3H"
+        "id": "ll8cFE8Lxesi"
       },
       "execution_count": null,
       "outputs": []
